{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 63,
  "lineage": "33bb5f99-83da-e296-6398-1784a2b4b50e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:549527353460:loadbalancer/elb",
            "availability_zones": [
              "eu-west-3a",
              "eu-west-3b"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "elb-1725368660.eu-west-3.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 10,
                "interval": 30,
                "target": "TCP:80",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "elb",
            "idle_timeout": 60,
            "instances": [
              "i-0a58941920b31fe93",
              "i-0a7d4bb23fbfb5e97"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "elb",
            "security_groups": [
              "sg-0cd25fbaaf53fbfec"
            ],
            "source_security_group": "549527353460/elb-sg",
            "source_security_group_id": "sg-0cd25fbaaf53fbfec",
            "subnets": [
              "subnet-0a399a5ee441fed41",
              "subnet-0ac8a7a6fbacebbe3"
            ],
            "tags": {
              "BillingCode": "ACCT8675309",
              "Environment": "dev",
              "Name": "dev-elb"
            },
            "zone_id": "Z3Q77PNBQS71R4"
          },
          "dependencies": [
            "aws_iam_instance_profile.instance_profile",
            "aws_iam_role.allow_nginx_s3",
            "aws_instance.ec2-instance1",
            "aws_instance.ec2-instance2",
            "aws_s3_bucket.web_bucket",
            "aws_security_group.ec2-instance-sg",
            "aws_security_group.elb-sg",
            "aws_subnet.subnet1",
            "aws_subnet.subnet2",
            "aws_vpc.vpc",
            "random_integer.rand"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-instance1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06cba15121418cdcb",
            "arn": "arn:aws:ec2:eu-west-3:549527353460:instance/i-0a7d4bb23fbfb5e97",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "instance_profile",
            "id": "i-0a7d4bb23fbfb5e97",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0aa438c48d7223ea2",
            "private_dns": "ip-10-1-0-38.eu-west-3.compute.internal",
            "private_ip": "10.1.0.38",
            "public_ip": "35.181.6.29",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-076141ee0c5132d7b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a399a5ee441fed41",
            "tags": {
              "BillingCode": "ACCT8675309",
              "Environment": "dev",
              "Name": "dev-ec2-instance1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-04a0472d674491f72"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.instance_profile",
            "aws_iam_role.allow_nginx_s3",
            "aws_s3_bucket.web_bucket",
            "aws_security_group.ec2-instance-sg",
            "aws_subnet.subnet1",
            "aws_vpc.vpc",
            "random_integer.rand"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-instance2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06cba15121418cdcb",
            "arn": "arn:aws:ec2:eu-west-3:549527353460:instance/i-0a58941920b31fe93",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "instance_profile",
            "id": "i-0a58941920b31fe93",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0179cdb24a8665b6b",
            "private_dns": "ip-10-1-1-87.eu-west-3.compute.internal",
            "private_ip": "10.1.1.87",
            "public_ip": "15.188.80.52",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-08e2230de6ff39bb5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ac8a7a6fbacebbe3",
            "tags": {
              "BillingCode": "ACCT8675309",
              "Environment": "dev",
              "Name": "dev-ec2-instance2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-04a0472d674491f72"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.instance_profile",
            "aws_iam_role.allow_nginx_s3",
            "aws_s3_bucket.web_bucket",
            "aws_security_group.ec2-instance-sg",
            "aws_subnet.subnet2",
            "aws_vpc.vpc",
            "random_integer.rand"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0d2716c43d78e37eb",
            "owner_id": "549527353460",
            "tags": {
              "BillingCode": "ACCT8675309",
              "Environment": "dev",
              "Name": "dev-igw"
            },
            "vpc_id": "vpc-0e5ed494ecda9bd9c"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-04a24cc49421b1d81",
            "owner_id": "549527353460",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d2716c43d78e37eb",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "BillingCode": "ACCT8675309",
              "Environment": "dev",
              "Name": "dev-rtb"
            },
            "vpc_id": "vpc-0e5ed494ecda9bd9c"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-subnet1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fcd142d728a4efd0",
            "route_table_id": "rtb-04a24cc49421b1d81",
            "subnet_id": "subnet-0a399a5ee441fed41"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rtb",
            "aws_subnet.subnet1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-subnet2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fcabc4d0de1bcff7",
            "route_table_id": "rtb-04a24cc49421b1d81",
            "subnet_id": "subnet-0ac8a7a6fbacebbe3"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rtb",
            "aws_subnet.subnet2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2-instance-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:549527353460:security-group/sg-04a0472d674491f72",
            "description": "Allow ports for ec2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04a0472d674491f72",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.1.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ec2_instance_sg",
            "name_prefix": null,
            "owner_id": "549527353460",
            "revoke_rules_on_delete": false,
            "tags": {
              "BillingCode": "ACCT8675309",
              "Environment": "dev",
              "Name": "dev-ec2-instance-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e5ed494ecda9bd9c"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:549527353460:security-group/sg-0cd25fbaaf53fbfec",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cd25fbaaf53fbfec",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "elb-sg",
            "name_prefix": null,
            "owner_id": "549527353460",
            "revoke_rules_on_delete": false,
            "tags": {
              "BillingCode": "ACCT8675309",
              "Environment": "dev",
              "Name": "dev-elb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e5ed494ecda9bd9c"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:549527353460:subnet/subnet-0a399a5ee441fed41",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.1.0.0/24",
            "id": "subnet-0a399a5ee441fed41",
            "map_public_ip_on_launch": true,
            "owner_id": "549527353460",
            "tags": {
              "BillingCode": "ACCT8675309",
              "Environment": "dev",
              "Name": "dev-subnet1"
            },
            "vpc_id": "vpc-0e5ed494ecda9bd9c"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:549527353460:subnet/subnet-0ac8a7a6fbacebbe3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.1.1.0/24",
            "id": "subnet-0ac8a7a6fbacebbe3",
            "map_public_ip_on_launch": true,
            "owner_id": "549527353460",
            "tags": {
              "BillingCode": "ACCT8675309",
              "Environment": "dev",
              "Name": "dev-subnet2"
            },
            "vpc_id": "vpc-0e5ed494ecda9bd9c"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:549527353460:vpc/vpc-0e5ed494ecda9bd9c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0b38fdffaac9a8938",
            "default_route_table_id": "rtb-082e51cf62ba72d93",
            "default_security_group_id": "sg-0d7741acb68f7c467",
            "dhcp_options_id": "dopt-71aea618",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0e5ed494ecda9bd9c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-082e51cf62ba72d93",
            "owner_id": "549527353460",
            "tags": {
              "BillingCode": "ACCT8675309",
              "Environment": "dev",
              "Name": "dev-vpc"
            }
          }
        }
      ]
    }
  ]
}